<resources>
    <string name="app_name">Daily Dose</string>

    <!--    Menu Paragraphs    -->
    <string name="about_intro_paragraph">Hello Peons. Welcome to my music sharing app. The purpose
        of this app is to allow me to send music directly to your phone, in the form of a push notification.
        I’ve had many people over the years ask me to send them music, and this app will not only
        give you access to part of my library, but let me send you stuff as I find them.
    </string>

    <string name="about_text_description">The way this works, is you go into this app’s settings,
        or preferences, and you tell me what genres of music you want to receive. Then, when I
        upload a song of that nature, you’ll receive a notification. Just tap on it, and it
        will take you to a streaming service where you can listen to it.
    </string>

    <string name="about_text_description_2">You can favorite the songs I send you by pressing the
        heart (duh). The first app screen is your favorites, and the other screen lets you browse
        the database. Go nuts!
    </string>


    <!--    TextView    -->
    <string name="text_welcome">~ Welcome! ~</string>
    <string name="text_favorites">Favorites</string>
    <string name="text_view_electronic_music">Electronic Music:</string>
    <string name="text_view_url">Url:</string>
    <string name="text_view_acoustic">Acoustic:</string>
    <string name="text_recent_uploads">Recent Uploads:</string>
    <string name="text_view_preferences_welcome">What do you like?</string>
    <string name="text_hello">Hello!</string>
    <string name="textview_title">Title:</string>
    <string name="textview_artist">Artist:</string>
    <string name="text_click_me">Click Me!</string>


    <!--    Hints    -->
    <string name="hint_enter_link">Enter Link Here</string>
    <string name="hint_artist_name">Enter Artist Name</string>
    <string name="hint_track_title">Enter Track Title</string>
    <string name="hint_enter_your_name">Enter your name</string>
    <string name="hint_enter_track_artist">Enter Track Artist</string>


    <!--    Buttons    -->
    <string name="button_preferences">Preferences</string>
    <string name="button_favorites">Favorites</string>
    <string name="button_browse">Browse</string>
    <string name="button_upload">Upload</string>
    <string name="button_clear_all">Clear All</string>
    <string name="button_next">Next</string>
    <string name="button_done">Done</string>
    <string name="button_finish">Finish</string>
    <string name="button_test">Test</string>
    <string name="button_unsub_test">No-Test</string>


    <!--    Menu    -->
    <string name="menu_about">About</string>
    <string name="menu_info">Info</string>

    <string name="menu_filter">Filter</string>
    <string name="menu_edm">EDM</string>
    <string name="menu_acoustic">Acoustic</string>


    <!--    Notification Stuff    -->
    <string name="track_notification_channel_title">Default Title</string>
    <string name="notification_channel_id">notification_channel_id</string>
    <string name="notification_channel_name">Notification Channel</string>


    <!--    Checkboxes    -->
    <string name="checkbox_dubstep">Dubstep</string>
    <string name="checkbox_melodic_dubstep">Melodic Dubstep</string>
    <string name="checkbox_lo_fi">Lo-Fi</string>
    <string name="checkbox_chillstep">Chillstep</string>
    <string name="checkbox_garage">Garage</string>
    <string name="checkbox_piano_ambient">Piano / Ambient</string>
    <string name="checkbox_experimental_bass">Experimental / Neuro Bass</string>
    <string name="checkbox_liquid_dnb">Liquid DnB</string>
    <string name="checkbox_ambient_bass">Ambient Bass (try me!)</string>
    <string name="checkbox_metalcore">Metalcore</string>
    <string name="checkbox_acoustic_ballads">Acoustic / Ballads</string>
    <string name="checkbox_death_metal">Death Metal</string>
    <string name="checkbox_live_performances">Live Performances</string>
    <string name="checkbox_instrumental_rock">Instrumental Rock</string>


    <!--    Firebase Strings    -->
    <string name="fcm_notification_channel_id">fcm_channel_id</string>
    <string name="fcm_notification_channel_name">FCM Channel</string>

    <!--    Alerts      -->
    <string name="cleared_message">All tracks deleted!</string>
    <string name="message_subscribed">Subscribed to topic</string>
    <string name="message_subscribe_failed">Failed to subscribe to topic</string>
    <string name="message_unsubscribe_failed">Failed to unsubscribe</string>

    <!--    Upload Alert      -->
    <string name="upload_alert_upload">Upload?</string>
    <string name="upload_alert_message">Are you sure you want to upload?</string>
    <string name="upload_alert_positive_button">Yes, Upload</string>
    <string name="upload_alert_negative_button">No, wait</string>

    <!-- Content Descriptions -->
    <string name="content_description_favorites_fab">Favorites Fab</string>
    <string name="cd_cat_picture">Self Portrait</string>

    <!-- Fragment Screen Titles -->
    <string name="fragment_home_title">Home</string>
    <string name="fragment_about_title">About</string>
    <string name="fragment_browse_title">Browse</string>
    <string name="fragment_info_title">Info</string>
    <string name="fragment_favorites_title">Favorites</string>
    <string name="fragment_preferences_title">Preferences</string>
    <string name="fragment_themes_title">Themes</string>
    <string name="fragment_upload_title">Upload</string>

    <!-- Info Fragment Strings -->
    <string name="info_rhett_pezzuti">Rhett Pezzuti</string>
    <string name="info_bout_me">Cats and computers</string>
    <string name="info_more">More music ~</string>
    <string name="info_soundcloud">https://soundcloud.com/rhettp</string>
    <string name="info_spotify">https://open.spotify.com/user/1212805377</string>
    <string name="cd_task_header_image">Task Header Image</string>
    <string name="menu_themes">Themes</string>

    <!-- SharedPref Keys -->
    <string name="user_preferences_key">rhett.pezzuti.dailydose.usersharedprefs</string>
    <string name="main_activity_theme_key">Activity Theme Key</string>
    <string name="sharedpref_username_key">username</string>

    <!-- Genres (Test is just test) -->
    <string name="genre_dubstep">Genre: Dubstep</string>
    <string name="genre_melodic_dubstep">Genre: Melodic Dubstep</string>
    <string name="genre_lo_fi">Genre: Lo-Fi</string>
    <string name="genre_chillstep">Genre: Chillstep</string>
    <string name="genre_garage">Genre: Garage</string>
    <string name="genre_piano_ambient">Genre: Piano / Ambient</string>
    <string name="genre_experimental_bass">Genre: Experimental Bass</string>
    <string name="genre_liquid_dnb">Genre: Liquid DnB</string>
    <string name="genre_ambient_bass">Genre: Ambient Bass</string>

    <string name="genre_metalcore">Genre: Metalcore</string>
    <string name="genre_acoustic_ballads">Genre: Acoustic / Ballads</string>
    <string name="genre_instrumental_rock">Genre: Instrumental Rock</string>
    <string name="genre_death_metal">Genre: Death Metal</string>
    <string name="genre_live_performances">Genre: Live Performance</string>

    <!-- Chips -->
    <string name="chip_dubstep">Dubstep</string>
    <string name="chip_melodic_dubstep">Melodic Dubstep</string>
    <string name="chip_lo_fi">Lo-Fi</string>
    <string name="chip_chillstep">Chillstep</string>
    <string name="chip_garage">Garage</string>
    <string name="chip_piano_ambient">Piano / Ambient</string>
    <string name="chip_experimental_bass">Experimental Bass</string>
    <string name="chip_liquid_dnb">Liquid DnB</string>
    <string name="chip_ambient_bass">mbient Bass</string>

    <string name="chip_metalcore">Metalcore</string>
    <string name="chip_acoustic_ballads">Acoustic / Ballads</string>
    <string name="chip_instrumental_rock">Instrumental Rock</string>
    <string name="chip_death_metal">Death Metal</string>
    <string name="chip_live_performances">Live Performances</string>


    <!-- TOPICS *** TOPICS *** TOPICS DON'T TOUCH -->
    <string name="TOPIC_TEST">Test</string>

    <string name="TOPIC_DUBSTEP">dubstep</string>
    <string name="TOPIC_MELODIC_DUBSTEP">melodic-dubstep</string>
    <string name="TOPIC_LO_FI">lo-fi</string>
    <string name="TOPIC_CHILLSTEP">chillstep</string>
    <string name="TOPIC_GARAGE">garage</string>
    <string name="TOPIC_PIANO_AMBIENT">piano-ambient</string>
    <string name="TOPIC_EXPERIMENTAL_BASS">experimental-bass</string>
    <string name="TOPIC_LIQUID_DNB">liquid-dnb</string>
    <string name="TOPIC_AMBIENT_BASS">ambient-bass</string>

    <string name="TOPIC_METALCORE">metalcore</string>
    <string name="TOPIC_ACOUSTIC_BALLADS">acoustic-ballads</string>
    <string name="TOPIC_INSTRUMENTAL_ROCK">instrumental-rock</string>
    <string name="TOPIC_DEATH_METAL">death-metal</string>
    <string name="TOPIC_LIVE_PERFORMANCES">live-performances</string>

    <!-- the FutuRUE!u@U~)!@()U -->
    <string name="text_minigame">Minigame Coming Soon! Thank you for downloading :)</string>




</resources>