<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="preferencesViewModelXML"
            type="rhett.pezzuti.dailydose.viewmodels.PreferencesViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.PreferencesFragment">

        <TextView
            android:id="@+id/text_view_preferences_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_preferences_welcome"
            android:textColor="@color/black"
            android:textSize="44sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_preferences_EDM"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_preferences_EDM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/magin_small"
            android:text="@string/text_view_electronic_music"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/checkbox_group_EDM"
            app:layout_constraintStart_toStartOf="@+id/checkbox_group_EDM" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_melodic_dubstep"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_preferences_EDM"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.877"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioGroup
            android:id="@+id/checkbox_group_EDM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/magin_small"
            app:layout_constraintBottom_toTopOf="@+id/button_upload"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.076"
            app:layout_constraintStart_toStartOf="parent">

            <CheckBox
                android:id="@+id/checkbox_dubstep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> preferencesViewModelXML.checkDubstep()}"
                android:text="@string/checkbox_dubstep" />

            <CheckBox
                android:id="@+id/checkbox_melodic_dubstep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> preferencesViewModelXML.checkMelodicDubstep()}"
                android:text="@string/checkbox_melodic_dubstep" />

            <CheckBox
                android:id="@+id/checkbox_lo_fi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> preferencesViewModelXML.checkLoFi()}"
                android:text="@string/checkbox_lo_fi" />

            <CheckBox
                android:id="@+id/checkbox_chillstep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> preferencesViewModelXML.checkChillstep()}"
                android:text="@string/checkbox_chillstep" />

            <CheckBox
                android:id="@+id/checkbox_future_garage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> preferencesViewModelXML.checkFutureGarage()}"
                android:text="@string/checkbox_future_garage" />

            <CheckBox
                android:id="@+id/checkbox_piano_ambient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> preferencesViewModelXML.checkPianoAmbient()}"
                android:text="@string/checkbox_piano_ambient" />

            <CheckBox
                android:id="@+id/checkbox_experimental_bass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> preferencesViewModelXML.checkExperimentalBass()}"
                android:text="@string/checkbox_experimental_bass" />

            <CheckBox
                android:id="@+id/checkbox_liquid_dnb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> preferencesViewModelXML.checkLiquidDnB()}"
                android:text="@string/checkbox_liquid_dnb" />

            <CheckBox
                android:id="@+id/checkbox_ambient_bass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> preferencesViewModelXML.checkAmbientBass()}"
                android:text="@string/checkbox_ambient_bass" />
        </RadioGroup>

        <TextView
            android:id="@+id/text_view_acoustic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/magin_small"
            android:text="@string/text_view_acoustic"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/checkbox_group_Acoustic"
            app:layout_constraintStart_toStartOf="@+id/checkbox_group_Acoustic" />

        <RadioGroup
            android:id="@+id/checkbox_group_Acoustic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/magin_small"
            app:layout_constraintBottom_toTopOf="@+id/button_upload"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/checkbox_group_EDM">

            <CheckBox
                android:id="@+id/checkbox_metalcore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> preferencesViewModelXML.checkMetalcore()}"
                android:text="@string/checkbox_metalcore" />

            <CheckBox
                android:id="@+id/checkbox_acoustic_ballads"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> preferencesViewModelXML.checkAcousticBallads()}"
                android:text="@string/checkbox_acoustic_ballads" />

            <CheckBox
                android:id="@+id/checkbox_instrumental_rock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> preferencesViewModelXML.checkInstrumentalRock()}"
                android:text="@string/checkbox_instrumental_rock" />

            <CheckBox
                android:id="@+id/checkbox_death_metal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> preferencesViewModelXML.checkDeathMetal()}"
                android:text="@string/checkbox_death_metal" />

            <CheckBox
                android:id="@+id/checkbox_live_performances"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> preferencesViewModelXML.checkLivePerformances()}"
                android:text="@string/checkbox_live_performances" />

        </RadioGroup>

        <Button
            android:id="@+id/button_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/magin_small"
            android:text="@string/button_done"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>