<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="uploadViewModelXML"
            type="rhett.pezzuti.dailydose.viewmodels.UploadViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorSecondaryVariant"
        tools:context=".fragments.UploadFragment">

        <TextView
            android:id="@+id/tv_upload_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/text_view_url"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/et_upload_url"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_upload_url"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:hint="@string/hint_enter_link"
            android:importantForAutofill="no"
            android:inputType="textUri"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_upload_url"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_upload_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:text="@string/textview_title"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/et_upload_title"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_upload_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:hint="@string/hint_track_title"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_upload_title"
            app:layout_constraintTop_toBottomOf="@+id/et_upload_url" />

        <TextView
            android:id="@+id/tv_upload_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:text="@string/textview_artist"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/et_upload_artist"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_upload_artist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:hint="@string/hint_enter_track_artist"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_upload_artist"
            app:layout_constraintTop_toBottomOf="@+id/et_upload_title"
            tools:ignore="LabelFor" />

        <Spinner
            android:id="@+id/upload_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_upload_artist" />

        <Button
            android:id="@+id/button_upload"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/margin_large"
            android:onClick="@{() -> uploadViewModelXML.uploadCheck()}"
            android:text="@string/button_upload"
            app:layout_constraintBottom_toTopOf="@+id/btn_clear_all"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/upload_spinner" />

        <Button
            android:id="@+id/btn_clear_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> uploadViewModelXML.onClear()}"
            android:text="@string/button_clear_all"
            android:layout_margin="@dimen/margin_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>